# openclcpp-lite

./: .clang-tidy  .gitignore  .licenserc.json  CITATION.cff  CMakeLists.txt  README.md
.github/: release.yml
.github/workflows/: build.yml  qa.yml  release.yml
cmake/: CodeCoverage.cmake  Findjinja2.cmake  Findpyyaml.cmake  OpenCLProgram.cmake  openclcpp-lite-config.cmake.in
include/openclcpp-lite/: buffer.h  cl.h  context.h  device.h  enums.h  error.h  event.h  exception.h  flags.h  kernel.h  kernel_functor.h  memory.h  ndrange.h  openclcpp-lite.h  platform.h  program.h  queue.h  range.h  templ.h  template.h  utils.h
include/openclcpp-lite/impl/: cl.h  context.h  device.h  error.h  exception.h  platform.h  queue.h
python/: oclcppl-gen.py  program.cpp.jinja2  program.h.jinja2
src/: CMakeLists.txt  buffer.cpp  context.cpp  device.cpp  enums.cpp  error.cpp  event.cpp  exception.cpp  kernel.cpp  memory.cpp  ndrange.cpp  platform.cpp  program.cpp  queue.cpp  template.cpp  utils.cpp
tests/: Atomics_test.cpp  Buffer_test.cpp  CMakeLists.txt  Context_test.cpp  Device_test.cpp  Error_test.cpp  Event_test.cpp  Exception_test.cpp  KernelFunctor_test.cpp  Kernel_test.cpp  NDRange_test.cpp  Platform_test.cpp  Program_test.cpp  Queue_test.cpp  Range_test.cpp  Template_test.cpp  TestVectorProgram_test.cpp  Utils_test.cpp  main.cpp  test_vector_program.cl
